# BioAutoNSTU

./: README.md
broker/: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
broker/src/: message-handler.ts  types.ts
communication-server/: package-lock.json  package.json  webpack.config.js
communication-server/src/: index.ts  message-handler.ts  message-handlers.ts  message-responses.ts  types.ts
pi/: CMakeLists.txt  README.md
pi/include/: classifier.hpp  cwrapper.h  macros_defs.h
pi/src/: CMakeLists.txt  pi.cpp
pi/src/example/: c_example.cpp  cpp_example.cpp
pi/src/include/: ie_facenet_v1.hpp
pi/src/lib/c/: cwrapper.cpp
pi/src/lib/cpp/: classifier.cpp  ie_facenet_v1.cpp
pi/src/pi/include/: base64.hpp  broker.hpp  config.hpp  globals.hpp  users.hpp
pi/src/pi/src/: broker.cpp  config.cpp  main.cpp  users.cpp
web/: package-lock.json  package.json  postcss.config.js  tsconfig.json  webpack.config.js
web/src/: index.html  index.ts  index.tsx  store.ts  styles.scss
web/src/components/: application.tsx  device-item.tsx  devices-list.tsx  user-item.tsx  users-list.tsx
web/src/reducers/: devices-reducer.ts  root-reducers.ts  users-reducer.ts
